--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -7,7 +7,9 @@
 
 // Desktops & Laptops
 @include mediaLg {
-  grid-template-columns: repeat(3, 1fr);
+  .projects {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 // Tablets & Small Laptops
@@ -68,8 +70,16 @@
 
 // Smartphones
 @include mediaSm {
-  main#home h1 {
-    margin-top: 10vh;
+  main {
+    padding: 2rem;
+    #home h1 {
+      margin-top: 10vh;
+    }
+
+    .lg-heading {
+      margin-top: 1rem;
+      font-size: 5rem;
+    }
   }
 
   .projects {
