--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -46,19 +46,19 @@
     transform: translate3d(100, 0, 0);
 
     .portrait {
-      background: url(..//img/portrait.jpg);
-      width: 150px;
-      height: 150px;
+      background: url(..//img/small.jpg);
+      width: 187px;
+      height: 130px;
     }
   }
 
   .about-info {
-    grid-template-areas: 
-    'bioimage'
-    'bio'
-    'job1'
-    'job2'
-    'job3';
+    grid-template-areas:
+      "bioimage"
+      "bio"
+      "job1"
+      "job2"
+      "job3";
 
     grid-template-columns: 1fr;
   }
