Fixed Contact Page

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -71,6 +71,7 @@
     &.show {
       // Slide in From Top
       transform: translate3d(0, 0, 0);
+      @include easeOut;
     }
   }
 
@@ -83,6 +84,7 @@
     &.show {
       // Slide in From Bottom
       transform: translate3d(0, 0, 0);
+      @include easeOut;
     }
 
     .portrait {
