--- a/scss/main.scss
+++ b/scss/main.scss
@@ -77,9 +77,9 @@ main {
   display: grid;
   grid-gap: 30px;
   grid-template-areas:
-  'bioimage bio bio'
-  'job1 job2 job3';
-  grid-template-columns : repeat(3, 1fr);
+    "bioimage bio bio"
+    "job1 job2 job3";
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .bio-image {
@@ -95,13 +95,13 @@ main {
 }
 
 .job-1 {
-  grid-area: job1
+  grid-area: job1;
 }
 .job-2 {
-  grid-area: job2
+  grid-area: job2;
 }
 .job-3 {
-  grid-area: job3
+  grid-area: job3;
 }
 
 .job {
@@ -113,9 +113,9 @@ main {
 // Work/Projects
 .projects {
   display: grid;
-  grid-gap: .7rem;
+  grid-gap: 0.7rem;
   grid-template-columns: repeat(3, 1fr);
-  
+
   img {
     width: 100%;
     border: 3px #fff solid;
@@ -134,7 +134,7 @@ main {
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  margin-top: 0rem;
+  margin-top: 1rem;
 
   div {
     font-size: 2rem;
@@ -163,7 +163,6 @@ main {
   &:hover {
     background: $secondary-color;
     color: set-text-color($secondary-color);
-
   }
 }
 
