--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -43,7 +43,7 @@
 
   .menu-branding {
     height: 25vh;
-    transform: translate3d(100, 0, 0);
+    transform: translate3d(100%, 0, 0);
 
     .portrait {
       background: url(..//img/small.jpg);
