--- a/scss/main.scss
+++ b/scss/main.scss
@@ -134,17 +134,18 @@ main {
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  margin-top: 1rem;
+  margin-top: 0rem;
 
   div {
     font-size: 2rem;
+    font-weight: 200;
     border: 3px #fff solid;
-    padding: 1.5rem 2.5rem;
+    padding: 1rem 2rem;
     margin-bottom: 3rem;
     @include easeOut;
 
     &:hover {
-      padding: 0.5rem 1.5rem;
+      padding: 0rem 1rem;
       background: $secondary-color;
       color: set-text-color($secondary-color);
       span {
