--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,5 @@
 $primary-color: #444;
-$secondary-color: #FF7A00;
+$secondary-color: #ff7a00;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
 $background-opacity: 0.9;
@@ -40,7 +40,7 @@ $background-opacity: 0.9;
 
 // Media Query Mixins
 @mixin mediaSm {
-  @media screen and (max-width: 500px) {
+  @media screen and (max-width: 1242px) {
     @content;
   }
 }
