--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -39,6 +39,11 @@ $background-opacity: 0.9;
 }
 
 // Media Query Mixins
+@mixin mediaSm {
+  @media screen and (max-width: 500px) {
+    @content;
+  }
+}
 
 @mixin mediaMd {
   @media screen and (max-width: 768px) {
