trying to fix contact still

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -46,9 +46,9 @@
     transform: translate3d(100%, 0, 0);
 
     .portrait {
-      background: url(..//img/small.jpg);
-      width: 187px;
-      height: 130px;
+      background: url("../img/portrait_small.jpg");
+      width: 150px;
+      height: 150px;
     }
   }
 
