--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -24,10 +24,12 @@
       &:nth-child(1) {
         transform: rotate(45deg) translate(5px, 5px);
       }
+
       // Line 2 - Hide
       &:nth-child(2) {
         opacity: 0;
       }
+
       // Line 3 - Rotate
       &:nth-child(3) {
         transform: rotate(-45deg) translate(7px, -6px);
@@ -41,7 +43,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  opacity: 0.99;
+  opacity: 0.9;
   visibility: hidden;
 
   &.show {
@@ -69,7 +71,7 @@
     @include easeOut;
 
     &.show {
-      // Slide in From Top
+      // Slide in from top
       transform: translate3d(0, 0, 0);
     }
   }
@@ -81,14 +83,14 @@
     @include easeOut;
 
     &.show {
-      // Slide in From Bottom
+      // Slide in from bottom
       transform: translate3d(0, 0, 0);
     }
 
     .portrait {
       width: 250px;
       height: 250px;
-      background: url(../img/portrait.jpg);
+      background: url("../img/portrait.jpg");
       border-radius: 50%;
       border: solid 3px $secondary-color;
     }
@@ -99,7 +101,7 @@
     @include easeOut;
 
     &.show {
-      // Slide in From Right
+      // Slide in from right
       transform: translate3d(0, 0, 0);
     }
 
