--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,7 +15,7 @@ body {
   line-height: 1.5;
 }
 
-//Headings
+// Headings
 h1,
 h2,
 h3 {
@@ -29,6 +29,7 @@ h3 {
   &.sm-heading {
     margin-bottom: 2rem;
     padding: 0.2rem 1rem;
+    background: rgba(lighten($primary-color, 2), 0.5);
   }
 }
 
@@ -47,7 +48,6 @@ header {
   color: $secondary-color;
 }
 
-//Main
 main {
   padding: 4rem;
   // height: 100%;
@@ -81,34 +81,36 @@ main {
     "bioimage bio bio"
     "job1 job2 job3";
   grid-template-columns: repeat(3, 1fr);
-}
 
-.bio-image {
-  grid-area: bioimage;
-  margin: auto;
-  border-radius: 50%;
-  border: $secondary-color 3px solid;
-}
+  .bio-image {
+    grid-area: bioimage;
+    margin: auto;
+    border-radius: 50%;
+    border: $secondary-color 3px solid;
+  }
 
-.bio {
-  grid-area: bio;
-  font-size: 1.5rem;
-}
+  .bio {
+    grid-area: bio;
+    font-size: 1.5rem;
+  }
 
-.job-1 {
-  grid-area: job1;
-}
-.job-2 {
-  grid-area: job2;
-}
-.job-3 {
-  grid-area: job3;
-}
+  .job-1 {
+    grid-area: job1;
+  }
 
-.job {
-  background: lighten($primary-color, 5);
-  padding: 0.5rem;
-  border-bottom: $secondary-color 5px solid;
+  .job-2 {
+    grid-area: job2;
+  }
+
+  .job-3 {
+    grid-area: job3;
+  }
+
+  .job {
+    background: lighten($primary-color, 5);
+    padding: 0.5rem;
+    border-bottom: $secondary-color 5px solid;
+  }
 }
 
 // Work/Projects
@@ -139,14 +141,13 @@ main {
 
   div {
     font-size: 2rem;
-    font-weight: 200;
     border: 3px #fff solid;
-    padding: 1rem 2rem;
+    padding: 1.5rem 2.5rem;
     margin-bottom: 3rem;
     @include easeOut;
 
     &:hover {
-      padding: 0rem 1rem;
+      padding: 0.5rem 1.5rem;
       background: $secondary-color;
       color: set-text-color($secondary-color);
       span {
@@ -156,7 +157,7 @@ main {
   }
 }
 
-//Button Styles
+// Button Styles
 .btn {
   display: block;
   padding: 0.5rem 1rem;
