--- a/scss/main.scss
+++ b/scss/main.scss
@@ -140,9 +140,9 @@ main {
   margin-top: 1rem;
 
   div {
-    font-size: 1.7rem;
+    font-size: 1.5rem;
     border: 3px #fff solid;
-    padding: 1.5rem 2.5rem;
+    padding: 1%;
     margin-bottom: 3rem;
     @include easeOut;
 
