--- a/scss/main.scss
+++ b/scss/main.scss
@@ -133,7 +133,7 @@ main {
 
 // Contact Page
 .boxes {
-  display: flex;
+  display: grid;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
@@ -142,8 +142,8 @@ main {
   div {
     font-size: 1.5rem;
     border: 3px #fff solid;
-    padding: 1%;
-    margin-bottom: 3rem;
+    padding: 1.5rem 2.5rem;
+    margin-bottom: 2rem;
     @include easeOut;
 
     &:hover {
