--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -40,7 +40,7 @@ $background-opacity: 0.9;
 
 // Media Query Mixins
 @mixin mediaSm {
-  @media screen and (min-width: 767px) {
+  @media screen and (min-width: 320px) and (max-width: 500px) {
     @content;
   }
 }
