--- a/scss/main.scss
+++ b/scss/main.scss
@@ -134,7 +134,7 @@ main {
 // Contact Page
 .boxes {
   display: grid;
-  flex-wrap: wrap;
+  grid-gap: 1rem;
   justify-content: space-evenly;
   align-items: center;
   margin-top: 1rem;
