--- a/scss/main.scss
+++ b/scss/main.scss
@@ -140,9 +140,9 @@ main {
   margin-top: 1rem;
 
   div {
-    font-size: 1.5rem;
-    border: 3px #fff solid;
-    padding: 1.5rem 2.5rem;
+    font-size: 25px;
+    border: 2px #fff solid;
+    padding: 1rem 2rem;
     margin-bottom: 2rem;
     @include easeOut;
 
