--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -46,9 +46,9 @@
     transform: translate3d(100%, 0, 0);
 
     .portrait {
-      background: url(../img/small.jpg);
-      width: 187px;
-      height: 130px;
+      background: url("../img/portrait_small.jpg");
+      width: 150px;
+      height: 150px;
     }
   }
 
@@ -78,7 +78,7 @@
 
     .lg-heading {
       margin-top: 1rem;
-      font-size: 4rem;
+      font-size: 5rem;
     }
   }
 
