--- a/scss/main.scss
+++ b/scss/main.scss
@@ -29,7 +29,6 @@ h3 {
   &.sm-heading {
     margin-bottom: 2rem;
     padding: 0.2rem 1rem;
-    //background: rgba(lighten($primary-color, 2), 0.5);
   }
 }
 
@@ -133,17 +132,17 @@ main {
 
 // Contact Page
 .boxes {
-  display: grid;
-  grid-gap: 1rem;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
   margin-top: 1rem;
 
   div {
-    font-size: 25px;
-    border: 2px #fff solid;
-    padding: 1rem 2rem;
-    margin-bottom: 2rem;
+    font-size: 2rem;
+    border: 3px #fff solid;
+    padding: 1.5rem 2.5rem;
+    margin-bottom: 3rem;
     @include easeOut;
 
     &:hover {
