changed flex to grid

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -132,15 +132,15 @@ main {
 
 // Contact Page
 .boxes {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
+  display: grid;
+  grid-column: auto;
+  justify-content: center;
   align-items: center;
   margin-top: 1rem;
 
   div {
-    font-size: 2rem;
-    border: 3px #fff solid;
+    font-size: 1.5rem;
+    border: 2px #fff solid;
     padding: 1.5rem 2.5rem;
     margin-bottom: 3rem;
     @include easeOut;
