--- a/scss/main.scss
+++ b/scss/main.scss
@@ -133,9 +133,8 @@ main {
 // Contact Page
 .boxes {
   display: grid;
-  grid-column: auto;
   justify-content: center;
-  align-items: center;
+  align-self: center;
   margin-top: 1rem;
 
   div {
