--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -40,7 +40,7 @@ $background-opacity: 0.9;
 
 // Media Query Mixins
 @mixin mediaSm {
-  @media screen and (max-width: 500px) {
+  @media only screen and (min-width: 375px) and (max-width: 812px) and (-webkit-device-pixel-ratio: 3) {
     @content;
   }
 }
