--- a/scss/main.scss
+++ b/scss/main.scss
@@ -133,14 +133,14 @@ main {
 // Contact Page
 .boxes {
   display: grid;
+  grid-gap: 0.7rem;
   justify-content: center;
-  align-self: center;
-  margin-top: 1rem;
+  align-content: center;
 
   div {
     font-size: 1.5rem;
     border: 2px #fff solid;
-    padding: 1.5rem 2.5rem;
+    padding: 1rem 0.5rem;
     margin-bottom: 3rem;
     @include easeOut;
 
